<resources>
    <string name="app_name">WhatsUp</string>
    <string name="application_name">WhatsUp</string>
    <string name="lbl_hello">Hello %1$s!</string>
    <string name="lbl_retry">Retry</string>
    <string name="lbl_loading_error">Loading error!</string>
    <string name="lbl_no_data">No more data!</string>
    <string name="lbl_search_more">Search more on web!</string>
    <string name="lbl_related">Related</string>
    <string name="lbl_tabs_tip">Add one tab. To move tab you can just long-press it and you see…</string>
    <string name="lbl_remove_tab">Do you want to remove the tab [%1$s]?</string>
    <string name="lbl_share_entry_title">%1$s:%2$s</string>
    <string name="lbl_share_entry_content">%1$s\n\nSee more on it\n%2$s\n\n%3$s</string>
    <string name="lbl_share_download_app">Download %1$s\n%2$s</string>
    <string name="lbl_share_app_title">Hey, there</string>
    <string name="lbl_share_app_content">Hello!\n\nMy name is %1$s and I am a new free light-weight independent news App.\n\n%2$s</string>
    <string name="lbl_store_url">https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="lbl_play_service">This application needs Google Play Service, you must install it first.</string>
    <string name="lbl_changed_language">Because you\'ve changed content-language, you\'d better restart application to reload new content and all subscribed push-topics have already been unsubscribed automatically.</string>
    <string name="lbl_app_reload">The application should be restarted, would you like?</string>
    <string name="lbl_sync_success">Synchronized…</string>
    <string name="lbl_sync_fail">Synchronization failed, please retry.</string>
    <string name="lbl_sync_label_added">Synchronized adding [%1$s].</string>
    <string name="lbl_sync_label_removed">Synchronized removing tab.</string>
    <string name="lbl_sync_same_label">You\'ve already same tab [%1$s].</string>
    <string name="lbl_register_push_failed">Can\'t register push-notification, do you have Internet?</string>
    <string name="lbl_unregister_push_failed">Can\'t unregister push-notification, do you have Internet?</string>
    <string name="lbl_registering">Registering…</string>
    <string name="lbl_unregistered">Unregistered…</string>
    <string name="lbl_subscribe">Subscribing…</string>
    <string name="lbl_unsubscribe">Unsubscribing…</string>
    <string name="lbl_subscribe_fail">Subscribed [%1$s] failed, please retry.</string>
    <string name="lbl_unsubscribe_fail">Unubscribed [%1$s] failed, please retry.</string>
    <string name="lbl_no_push_opened">Please turn on the push-notification first…</string>
    <string name="lbl_data_source">API(Data-Source):</string>
    <string name="lbl_ask_push">Would you like to subscribe Push-notifications of some topics?\n\nYou\'ll be enable to checkout a list of pre-defined topics or click [DIY] to customize your own topics.</string>
    <string name="lbl_push_list">Topics to push</string>
    <string name="lbl_customized_push">You can customize max.5 topics to push.</string>
    <string name="lbl_topic_1">1.</string>
    <string name="lbl_topic_2">2.</string>
    <string name="lbl_topic_3">3.</string>
    <string name="lbl_topic_4">4.</string>
    <string name="lbl_topic_5">5.</string>
    <string name="lbl_connect_google">Connecting on Google…</string>
    <string name="lbl_welcome">Welcome to %1$s\na free and lightweight news application!</string>
    <string name="lbl_exclude_chars">The following characters are not allowed within the query / = ( ) : ;</string>
    <string name="lbl_empty_bookmarks">Your bookmark-list ist currently empty.\nPull me down and refresh.</string>
    <string name="lbl_load_bookmarks_error">There\'re some problems while loading bookmark-list.\nPull me down and loading again.</string>


    <string name="suggestion_auth" translatable="false">com.cusnews.app.SearchSuggestionProvider</string>


    <string name="action_visit_faroo">Faroo Blog</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_type">View type</string>
    <string name="action_view_type_horizontal">Horizontal</string>
    <string name="action_view_type_vertical">Vertical</string>
    <string name="action_view_type_grid">Grid</string>
    <string name="action_top">To top</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_about">About</string>
    <string name="action_backward">Backward</string>
    <string name="action_forward">Forward</string>
    <string name="action_more_apps">More Apps</string>
    <string name="action_trends">Trends</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_push">Push</string>

    <!--For DynamicShareActionProvider-->

    <string name="no_app_to_share">No app installed to share data of type %s!</string>
    <string name="no_share_type">No share type specified!</string>
    <string name="error_occurred">Sorry, an error occurred.</string>

    <string name="interstitial_ad_unit_id">ca-app-pub-9133982521997162/1943700138</string>

    <string name="btn_confirm">Confirm</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_agree">I agree.</string>
    <string name="btn_not_agree">I do not agree.</string>
    <string name="btn_begin">Begin now</string>
    <string name="btn_close_app">Close app</string>
    <string name="btn_diy">DIY</string>

    <!-- Shown in the 'About' window of the app. -->
    <string name="about_body">&lt;b&gt;%1$s &lt;/b&gt;&lt;br&gt;Version %2$s &lt;br&gt;</string>
    <!-- Shown as a link in the About screen of the app; user can click it to see the licenses. -->
    <string name="about_licenses">Open Source Licenses</string>
    <!-- Shown as a link in the About screen of the app; user can click to see the EULA. -->
    <string name="about_eula">End User License Agreement</string>
    <string name="about_eula_legal_text">Your use of this application is governed by a)Activating permissions of
        hardware that the features of this application need and work well. b)The Google Terms of
        Service (http://www.google.com/intl/en/policies/terms/), Google\'s Privacy
        Policy(http://www.google.com/intl/en/policies/privacy/). c)Any applicable Google service-specific terms of service of privacy
        policies. Google\'s terms of service and privacy policies may be updated from time to time and without
        notice.\n\n\nBy using the application, your agree to the use of your data and permissions of your hardware in
        accordance with Google\'s Privacy Policy and Google Terms of Service.</string>
    <string name="play_service_url">market://details?id=com.google.android.gms</string>
    <string name="play_service_web">https://play.google.com/store/apps/details?id=com.google.android.gms</string>


    <string name="setting_lang">Content-language</string>
    <string-array name="lang_types">
        <item>English</item>
        <item>German</item>
        <item>Chinese</item>
    </string-array>
    <string-array name="lang_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>


    <string name="setting_show_image">Show all images of content</string>


    <string name="setting_push">Push</string>
    <string name="setting_push_open_close">Receive Push-notification.</string>
    <string name="setting_push_open">On</string>
    <string name="setting_push_close">Off</string>
    <string name="setting_push_selection">Topic selection</string>
    <string name="setting_push_news">News</string>
    <string name="setting_push_football">Soccer</string>
    <string name="setting_push_internet">IT</string>
    <string name="setting_push_google">Google Inc.</string>
    <string name="setting_push_apple">Apple Inc.</string>
    <string name="setting_diy">Push DIY</string>

    <string-array name="setting_pushs">
        <item>@string/setting_push_selection</item>
        <item>@string/setting_diy</item>
    </string-array>
</resources>
