<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/action_view_type"
        android:title="@string/action_view_type"
        app:actionProviderClass="com.cusnews.widgets.ViewTypeActionProvider"
        android:icon="@drawable/ic_view_change"
        app:showAsAction="always" />



    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />



    <item
        android:id="@+id/action_to_top"
        android:title="@string/action_top"
        android:icon="@drawable/ic_top"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_action_social_share"
        app:showAsAction="ifRoom"
        app:actionProviderClass="com.cusnews.widgets.DynamicShareActionProvider"/>


    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
